#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(agnostic, 1.0, ds@savenko.com)
AM_INIT_AUTOMAKE(agnostic, 1.0)
AC_CONFIG_SRCDIR([ag-info.c])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)